--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "node": "8.11"
   },
   "dependencies": {
-    "npm": "^5.8.0"
+    "gulp-imagemin": "^4.1.0",
+    "gulp-posthtml": "^3.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-svgstore": "^6.1.1",
+    "gulp-webp": "^3.0.0",
+    "npm": "^5.8.0",
+    "posthtml-include": "^1.1.0"
   }
 }
