--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "node": "8.11"
   },
   "dependencies": {
+    "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-svgstore": "^6.1.1",
     "gulp-webp": "^3.0.0",
     "npm": "^5.8.0",
-    "posthtml-include": "^1.1.0"
+    "posthtml-include": "^1.1.0",
+    "run-sequence": "^2.2.1"
   }
 }
