--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
+    "gulp-js-minify": "0.0.3",
     "gulp-less": "^3.5.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
